--- a/OpenVote.Web.Client/Pages/Index.razor
+++ b/OpenVote.Web.Client/Pages/Index.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
+@inject HttpClient Http
 
 <h1>Hello, Open Vote! You now free person !!</h1>
 
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+
